# breakout_game

./: .env  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  tree.txt
docs/: api.md
src/breakout_game/: __init__.py  main.py
src/breakout_game/static/: game.py
src/breakout_game/templates/: index.html
tests/: __init__.py  test_game.py
