[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "breakout_game"
version = "0.1.0"
dependencies = [
    "fastapi>=0.109.2",
    "uvicorn>=0.27.1",
    "jinja2>=3.1.3",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.23.5",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v"
pythonpath = ["."]